--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
 <div class="container">
-  <app-product-list></app-product-list>
+  <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
